# cancer_recognition

./: .gitignore  cancer_recognition.ipynb  cancer_recognition.py  pyproject.toml  readme.md
