[tool.poetry]
name = "cancer-prediction"
version = "0.1.0"
description = ""
authors = ["ToudertiHiba <hibatouderti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.1.1"
tensorflow = "^2.14.0"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
